src/styles/layout/_form.scss
.form {
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  max-width: 60ch;
  margin: 0 auto;
  padding: 0 2rem;

  margin-top: 8rem;
  margin-bottom: 3rem;

  img {
    width: 100%;
  }

  @media (max-width: 40rem) {
    margin-top: 4rem;
  }

  .spaced-p {
    margin-bottom: 1rem;
  }

  .spacer {
    height: 2rem;
  }
}

